--- a/app/styles/_my_dashboard.scss
+++ b/app/styles/_my_dashboard.scss
@@ -7,6 +7,15 @@
     }
   }
 
+  &.offer-details {
+    @media #{$large-up} {
+      &.row {
+        max-width: 100%;
+        margin: 0 auto;
+      }
+    } 
+  }
+
   .title {
     font-weight: bold;
     font-size: 1rem;
