increased page width for offer_details page

--- a/app/templates/offers/detail.hbs
+++ b/app/templates/offers/detail.hbs
@@ -1,4 +1,4 @@
-<div class="row my_dashboard">
+<div class="row my_dashboard offer-details">
   <div class="title show-for-medium-up">Respond to Offer {{model.id}}</div>
   {{partial 'offers/offers_tabs'}}
 
