--- a/app/templates/components/item-thumbnail-view.hbs
+++ b/app/templates/components/item-thumbnail-view.hbs
@@ -3,7 +3,7 @@
   <img src="{{src}}" class="cl-item-image {{if loading 'hidden'}} {{if isSmallScreen 'profile'}}"/>
 
   {{#if displayItemOverlay}}
-    <div class="image-item-overlay">
+    <div class="offer-item-overlay">
       <div class="item_desc">
         <li class="ellipsis two-line-ellipsis">
           <span class="item-package-category">
