--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -32,3 +32,14 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'lg';
+  src: url("fonts/lg.eot");
+  src: url("fonts/lg.eot?#iefix") format("embedded-opentype"),
+  url("fonts/lg.woff") format("woff"),
+  url("fonts/lg.ttf") format("truetype"),
+  url("fonts/lg.svg#lg") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
