--- a/app/templates/offers/detail.hbs
+++ b/app/templates/offers/detail.hbs
@@ -2,8 +2,9 @@
   <div class="title show-for-medium-up">Respond to Offer {{model.id}}</div>
   {{partial 'offers/offers_tabs'}}
 
-  <b style="color: white;">Notes:</b> <br>
-  {{model.notes}}
+  <div>
+    These are the list of Items:
+  </div>
   <div class="large-block-grid-6 small-block-grid-2 medium-block-grid-3 list items_list xxlarge-block-grid-4">
     {{#each model.items as |item|}}
       <li>
