sorting added for offers list page

--- a/app/styles/templates/_offers.scss
+++ b/app/styles/templates/_offers.scss
@@ -23,4 +23,12 @@
     margin-left: 6%;
     color: #C4C9CF;
   }
+
+  #search {
+    width: 60%;
+    margin-left: 19%;
+    padding-left: .5rem;
+    border-radius: .25rem;
+    height: 2rem;
+  }
 }
