fixed: sorting issue of offer

--- a/app/templates/offers/index.hbs
+++ b/app/templates/offers/index.hbs
@@ -21,7 +21,7 @@
 
     <hr>
     <ul class="large-block-grid-6 small-block-grid-2 medium-block-grid-3 list items_list xxlarge-block-grid-4">
-      {{#each model as |record|}}
+      {{#each offers as |record|}}
         {{offers-block record=record}}
       {{/each}}
     </ul>
