--- a/app/templates/offers/index.hbs
+++ b/app/templates/offers/index.hbs
@@ -22,7 +22,7 @@
     <hr>
     <ul class="large-block-grid-6 small-block-grid-2 medium-block-grid-3 list items_list xxlarge-block-grid-4">
       {{#each offers as |record|}}
-        {{offers-block record=record}}
+        {{offers-block record=record district=record.district_id}}
       {{/each}}
     </ul>
   </section>
