--- a/app/styles/templates/_package_category.scss
+++ b/app/styles/templates/_package_category.scss
@@ -106,6 +106,43 @@
     }
   }
 
+  .item {
+    position: relative;
+    
+    border: 1px solid #333;
+    float: left;
+    margin: 2%;
+    overflow: hidden;
+    max-width: 540px;
+  }
+  .item img {
+    max-width: 100%;
+  }
+
+  .item:hover .item-overlay.top {
+    top: 0;
+  }
+
+  .item-overlay {
+    position: absolute;
+    top: 20%; 
+    right: 0; 
+    bottom: 0; 
+    left: 0;
+    background: #1A3C63;
+    color: #fff;
+    overflow: hidden;
+    text-align: center;
+    width: 100%; 
+    opacity: .8;
+    -moz-transition: top 0.3s; 
+    -webkit-transition: top 0.3s;
+    transition: top 0.3s;
+  }
+  .item-overlay.top {
+    top: 80%;
+  }
+
   select {
     -webkit-appearance: unset !important;
     background-color: unset;
