--- a/app/templates/components/item-thumbnail-view.hbs
+++ b/app/templates/components/item-thumbnail-view.hbs
@@ -1,20 +1,18 @@
-<div class="image-tabs">
+<div class="item">
   <img src="/assets/images/image-loading.gif" class="cl-loading-img {{unless loading 'hidden'}}"/>
   <img src="{{src}}" class="cl-item-image {{if loading 'hidden'}} {{if isSmallScreen 'profile'}}"/>
-
+  
   {{#if displayItemOverlay}}
-    <div class="image-item-overlay">
-      <div class="item_desc">
-        <li class="ellipsis two-line-ellipsis">
-          <span class="item-package-category">
-            {{pkgTypeType.name}}
-          </span>
-          :
-          <span class="item-notes">
-            {{item.attributes.notes}}
-          </span>
-        </li>
-      </div>
+    <div class="item-overlay top">
+      <li class="ellipsis two-line-ellipsis" style="text-align: left;">
+        <span class="item-package-category">
+          {{pkgTypeType.name}}
+        </span>
+        :
+        <span class="item-notes">
+          {{item.attributes.notes}}
+        </span>
+      </li>
     </div>
   {{/if}}
 </div>
