--- a/app/templates/components/item-thumbnail-view.hbs
+++ b/app/templates/components/item-thumbnail-view.hbs
@@ -4,7 +4,7 @@
   
   {{#if displayItemOverlay}}
     <div class="item-overlay top">
-      <li class="ellipsis two-line-ellipsis" style="text-align: left;">
+      <li class="ellipsis" style="text-align: left;">
         <span class="item-package-category">
           {{pkgTypeType.name}}
         </span>
