--- a/app/styles/_search.scss
+++ b/app/styles/_search.scss
@@ -155,6 +155,7 @@
   }
 
   .back_icon {
+    display: flex;
     margin-left: 10%;
     text-decoration: none;
   }
@@ -172,7 +173,12 @@
     }
   }
 
+  .angle_left_icon{
+    padding-top: 1rem;
+  }
+
   .back_button {
+    text-align: center;
     i {
       position: inherit;
     }
@@ -181,13 +187,15 @@
   .organisation_back {
     text-decoration: none;
     color: #000;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     cursor: pointer;
     padding-top: 1rem;
+    margin-left: 0.5rem;
 
     @media #{$small-only} {
-      margin-left: -10%;
       font-size: 0.7rem;
+      margin-left: unset;
+      padding-top: 1.1rem;
     }
   }
 
@@ -253,7 +261,6 @@
 
   .org_search {
     color: #E2E6EB;
-    margin-left: -2%;
     padding-bottom: 1rem;
   }
 }
@@ -308,6 +315,7 @@
 
 .contact_us {
   color: #000;
+  cursor: default;
   padding: .7rem 1rem 1rem 1.8rem;
   font-size: .7rem !important;
 }
