Removed autocomplete from organisation search

--- a/app/templates/search_organisation.hbs
+++ b/app/templates/search_organisation.hbs
@@ -13,7 +13,9 @@
           id="searchText"
           placeholder= "Search Organisation"
           value=searchText
-          disabled=false}}
+          disabled=false
+          autocomplete="off"
+        }}
 
         {{#if hasSearchText}}
           <i class="fa" {{action "clearSearch"}}>{{fa-icon 'times-circle'}}</i>
