:tada: Initial commit

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -29,6 +29,7 @@
 @import "static_pages";
 @import "about";
 @import "mentions";
+@import "pin_verify";
 @import "components/_popup-overlay.scss";
 
 @import "templates/home";
