changed max-width to width for IE

--- a/app/styles/templates/_package_category.scss
+++ b/app/styles/templates/_package_category.scss
@@ -112,7 +112,7 @@
     float: left;
     margin: 2%;
     overflow: hidden;
-    max-width: 540px;
+    max-width: 100%;
   }
   .item img {
     max-width: 100%;
