Revert "changed max-width to width for IE"
This reverts commit 3e2a2a57270d57e2567442bd324534a5535fc07c.

--- a/app/styles/templates/_package_category.scss
+++ b/app/styles/templates/_package_category.scss
@@ -112,7 +112,7 @@
     float: left;
     margin: 2%;
     overflow: hidden;
-    max-width: 100%;
+    max-width: 540px;
   }
   .item img {
     max-width: 100%;
