--- a/app/styles/templates/_client_information.scss
+++ b/app/styles/templates/_client_information.scss
@@ -13,6 +13,7 @@
   .time_inputs {
     margin-left: 0;
     margin-right: 0;
+    float: unset !important;
 
     .custom_radio_buttons {
       @media #{$small-only} {
