--- a/app/templates/offers/detail.hbs
+++ b/app/templates/offers/detail.hbs
@@ -1,9 +1,9 @@
 <div class="row my_dashboard offer-details category_page offers">
-  <div class="title show-for-medium-up">Respond to Offer {{model.id}}</div>
+  <div class="title show-for-medium-up">{{t "shareableOffers.respond_to_offer"}} {{model.id}}</div>
   {{partial 'offers/offers_tabs'}}
 
   <div class="item_view">
-    List of Items:
+    {{t "shareableOffers.list_of_items"}}:
   </div>
   <section class="main-section category-items-list">
     <ul>
