--- a/app/templates/offers/index.hbs
+++ b/app/templates/offers/index.hbs
@@ -1,7 +1,7 @@
 <div class="category_page offers">
   <nav class="tab-bar category_page">
     <section class='main-section ui'>
-      <h1 align="center" class="title hide-for-small">GoodCity for Charities</h1>     
+      <h1 align="center" class="title hide-for-small">{{t "browse.title"}}</h1>
     </section>
   </nav>
 
