:art: Add ability to verify pin on changing mobile number

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -28,6 +28,7 @@
 @import "about";
 @import "mentions";
 @import "components/_popup-overlay.scss";
+@import "components/change_phone_number_overlay";
 
 @import "templates/home";
 @import "templates/loading";
