--- a/app/styles/components/_change_phone_number_overlay.scss
+++ b/app/styles/components/_change_phone_number_overlay.scss
@@ -1,14 +1,21 @@
 .change-phonenumber-container {
   height: 70%;
-  display: grid;
-  grid-template-columns: auto auto;
-  padding-right: 2rem;
-  justify-items: center;
-  align-content: center;
-}
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: 0%;
 
-.change-phonenumber-button-container {
-  grid-column: 1 / 3;
+  .item {
+    flex-grow: 1;
+    margin: auto;
+  }
+
+  .item-wide {
+    flex-grow: 3;
+    margin: auto;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
 }
 
 .pin-input-container {
