--- a/app/templates/components/change-phone-number-overlay.hbs
+++ b/app/templates/components/change-phone-number-overlay.hbs
@@ -1,24 +1,29 @@
 <div class="cmp search-overlay">
   {{#popup-overlay open=open}}
-    <div class="back_text" {{action "cancelSearch" }}>
-      {{fa-icon 'angle-left' }} {{t 'cancel'}}
+  <div class="back_text" {{action "cancelSearch" }}>
+    {{fa-icon 'angle-left' }} {{t 'cancel'}}
+  </div>
+
+  {{#unless showPinInput}}
+  <div class="change-phonenumber-container">
+    <div class="item">
+      <span class="prefix item">+852</span>
     </div>
+    <div class="item-wide">
+      {{numeric-input class="item-wide" maxlength="8" value=mobileNumber pattern="^.{8}$" autoFocus=true}}
+    </div>
+    <div class="item">
+      <button class="item" {{action 'initiateChange' }}>Update</button>
+    </div>
+  </div>
 
-    {{#unless showPinInput}}
-      <div class="change-phonenumber-container">
-        <span class="prefix">+852</span>
-        {{numeric-input maxlength="8" value=mobileNumber pattern="^.{8}$" autoFocus=true}}
-
-        <div class="change-phonenumber-button-container">
-          <button {{action 'initiateChange'}}>Update</button>
-        </div>
-      </div>
-    {{/unless}}
-    {{#if showPinInput}}
-      <div class="pin-input-container">
-        {{numeric-input classNames="number_input center_align_placeholder" value=pin name="pin" id="pin" maxlength="4" placeholder="XXXX" required='true' pattern=".{4,}" autoFocus=true}}
-        <button {{action 'updatePhoneNumber'}}>Continue</button>
-      </div>
-    {{/if}}
+  {{/unless}}
+  {{#if showPinInput}}
+  <div class="pin-input-container">
+    {{numeric-input classNames="number_input center_align_placeholder" value=pin name="pin" id="pin" maxlength="4"
+    placeholder="XXXX" required='true' pattern=".{4,}" autoFocus=true}}
+    <button {{action 'updatePhoneNumber' }}>Continue</button>
+  </div>
+  {{/if}}
   {{/popup-overlay}}
 </div>
