--- a/app/templates/my_account.hbs
+++ b/app/templates/my_account.hbs
@@ -73,7 +73,7 @@
                   <div class="row">
                     {{#if model.user.mobile}}
                     <div class="small-12 medium-12 large-6 columns">
-                      {{model.user.mobile}}
+                      {{model.user.mobileWithoutCountryCode}}
                     </div>
                     {{#if model.user.isMobileVerified}}
                     <div class="small-3 medium-3 large-3 columns verified_icon">
@@ -109,5 +109,5 @@
     </div>
   </div>
 
-  {{change-phone-number-overlay open=accountService.openPhoneOverlay}}
+  {{change-phone-number-overlay model=model.user open=accountService.openPhoneOverlay}}
 </div>
