--- a/app/templates/my_account.hbs
+++ b/app/templates/my_account.hbs
@@ -99,7 +99,7 @@
               </div>
               <div class="detail-row row">
                 <div class="small-6 columns data-type">
-                  <button {{action 'showPhoneOverlay'}}>{{t 'account.change_phone_number'}}</button>
+                  <button {{action 'showPhoneOverlay'}}>{{t 'account.change_phone_number.title'}}</button>
                 </div>
               </div>
             </div>
