--- a/app/templates/components/change-phone-number-overlay.hbs
+++ b/app/templates/components/change-phone-number-overlay.hbs
@@ -6,6 +6,9 @@
 
   {{#unless showPinInput}}
   <div class="change-phonenumber-container">
+    <div class="item-description">
+      {{t "account.change_phone_number.description"}}
+    </div>
     <div class="item">
       <span class="prefix item">+852</span>
     </div>
@@ -20,6 +23,11 @@
   {{/unless}}
   {{#if showPinInput}}
   <div class="pin-input-container">
+    <div class="item-description">
+      <span>
+        {{t "account.change_phone_number.pin_instruction"}} {{mobileNumber}}
+      </span>
+    </div>
     <div class="item-wide">
       {{numeric-input classNames="number_input center_align_placeholder" value=pin name="pin" id="pin" maxlength="4"
       placeholder="XXXX" required='true' pattern=".{4,}" autoFocus=true}}
