--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -271,6 +271,10 @@ $sidebar-width: 7.8rem;
   float: right;
 }
 
+.notification {
+  left: 15%;
+}
+
 .cart-icon-with-search {
   margin-right: 15%;
   font-weight: 900;
