--- a/app/templates/sidebar.hbs
+++ b/app/templates/sidebar.hbs
@@ -10,6 +10,12 @@
     <h1>{{pageTitle}}</h1>
   </section>
 
+  {{#if showNotificationIcon}}
+    <section class="right-small notification">
+      {{notification-icon}}
+    </section>
+  {{/if}}
+
   {{#if showSearchIcon}}
   {{#link-to "search_goods"}}
   <section class="right-small {{if hasCartItems 'cart-icon-with-search' 'search-icon'}}" align="center">
