Added notification component to all the required tab

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -19,6 +19,7 @@
 @import "search";
 @import "account_details";
 @import "request_purpose";
+@import "my_notifications";
 @import "order_block";
 @import "confirm_booking";
 @import "messages";
