--- a/app/templates/browse.hbs
+++ b/app/templates/browse.hbs
@@ -1,4 +1,7 @@
 <nav class="tab-bar hide-for-small">
+  <section class='left-samll'style="float: left;">
+    {{notification-icon}}
+  </section>
   <section class='main-section'>
     <h1 class="browse-title" align="center">{{t "browse.title"}}</h1>
   </section>
