--- a/app/templates/offers/index.hbs
+++ b/app/templates/offers/index.hbs
@@ -1,7 +1,10 @@
 <div class="category_page offers">
-  <nav class="tab-bar category_page">
+  <nav class="tab-bar category_page hide-for-small">
+    <section class='left-samll'style="float: left;padding-top:0.6rem;">
+      {{notification-icon}}
+    </section>
     <section class='main-section ui'>
-      <h1 align="center" class="title hide-for-small">{{t "browse.title"}}</h1>
+      <h1 align="center" class="title">{{t "browse.title"}}</h1>
     </section>
   </nav>
 
