--- a/app/templates/my_dashboard/_my_dashboard_tabs.hbs
+++ b/app/templates/my_dashboard/_my_dashboard_tabs.hbs
@@ -1,3 +1,12 @@
+<div class="title show-for-medium-up">
+  <div class="large-1 medium-1 columns">
+     {{notification-icon}}
+  </div>
+  <div style="padding-right:3rem;">
+    {{t "my_dashboard.title"}}
+  </div>
+</div>
+
 <div class="row tabs tab-icons">
   {{#link-to 'my_orders' tagName="div" classNames="small-6 orders tab columns text-center"}}
   <i class="fa dashboard-menu item-menu">{{fa-icon 'shopping-cart'}}</i>
