:lipstick: Add UI Enhancements

--- a/app/templates/components/change-phone-number-overlay.hbs
+++ b/app/templates/components/change-phone-number-overlay.hbs
@@ -5,37 +5,43 @@
   </div>
 
   {{#unless showPinInput}}
-  <div class="change-phonenumber-container">
-    <div class="item-description">
-      {{t "account.change_phone_number.description"}}
-    </div>
-    <div class="item">
-      <span class="prefix item">+852</span>
-    </div>
-    <div class="item-wide">
-      {{numeric-input class="item-wide" maxlength="8" value=mobileNumber pattern="^.{8}$" autoFocus=true}}
-    </div>
-    <div class="item">
-      <button class="item" {{action 'initiateChange' }}>Update</button>
-    </div>
-  </div>
-
+    {{#validatable-form class='phone-form' onSubmit=(action 'initiateChange') as |form|}}
+      <div class="change-phonenumber-container">
+        <div class="item-description">
+          {{t "account.change_phone_number.description"}}
+        </div>
+        <div class="item">
+          <span class="prefix item">+852</span>
+        </div>
+        <div class="item-wide">
+          {{numeric-input class="item-wide" maxlength="8" value=mobileNumber pattern="^.{8}$" autoFocus=true}}
+        </div>
+        <div class="item">
+          <button class="item" {{action 'submit' target=form}}>Update</button>
+        </div>
+      </div>
+    {{/validatable-form}}
   {{/unless}}
+
   {{#if showPinInput}}
-  <div class="pin-input-container">
-    <div class="item-description">
-      <span>
-        {{t "account.change_phone_number.pin_instruction"}} {{mobileNumber}}
-      </span>
+  {{#validatable-form class='phone-form' onSubmit=(action 'updatePhoneNumber') as |form|}}
+    <div class="pin-input-container">
+      <div class="item-description">
+        <span>
+          {{t "account.change_phone_number.pin_instruction"}} {{mobileNumber}}
+        </span>
+      </div>
+      <div class="item-wide">
+        {{numeric-input classNames="number_input center_align_placeholder" value=pin name="pin" id="pin" maxlength="4"
+        onEvent="keypress"
+        action='updatePhoneNumber'
+        placeholder="XXXX" required='true' pattern=".{4,}" autoFocus=true}}
+      </div>
+      <div class="item">
+        <button {{action 'submit' target=form}}>Continue</button>
+      </div>
     </div>
-    <div class="item-wide">
-      {{numeric-input classNames="number_input center_align_placeholder" value=pin name="pin" id="pin" maxlength="4"
-      placeholder="XXXX" required='true' pattern=".{4,}" autoFocus=true}}
-    </div>
-    <div class="item">
-      <button {{action 'updatePhoneNumber' }}>Continue</button>
-    </div>
-  </div>
+  {{/validatable-form}}
   {{/if}}
   {{/popup-overlay}}
 </div>
