--- a/app/styles/components/_change_phone_number_overlay.scss
+++ b/app/styles/components/_change_phone_number_overlay.scss
@@ -1,3 +1,6 @@
+.phone-form {
+  height: 100%;
+}
 .change-phonenumber-container {
   height: 70%;
   display: grid;
@@ -6,7 +9,7 @@
   padding: 10px;
   justify-items: center;
   align-content: center;
-  padding-right: 0%;
+  padding-right: 20px;
 
   .item-description {
     grid-column: auto / span 3;
@@ -31,7 +34,7 @@
   padding: 10px;
   justify-items: center;
   align-content: center;
-  padding-right: 0%;
+  padding-right: 10px;
   grid-gap: 10px;
 
   .item {
