:pencil: Add translation

--- a/app/templates/components/change-phone-number-overlay.hbs
+++ b/app/templates/components/change-phone-number-overlay.hbs
@@ -38,7 +38,7 @@
         placeholder="XXXX" required='true' pattern=".{4,}" autoFocus=true}}
       </div>
       <div class="item">
-        <button {{action 'submit' target=form}}>Continue</button>
+        <button {{action 'submit' target=form}}>{{t 'continue'}}</button>
       </div>
     </div>
   {{/validatable-form}}
