--- a/app/styles/_my_account.scss
+++ b/app/styles/_my_account.scss
@@ -17,16 +17,10 @@
     &.details {
       .detail-row {
         font-size: 0.9rem;
-        margin: 0.5rem 0;
-
-        .data-type {
-          @extend .columns;
-          @extend .small-4;
-        }
+        margin: 0.8rem 0;
+        overflow-wrap: break-word;
 
         .data {
-          @extend .columns;
-          @extend .small-8;
           color: white;
         }
       }
