--- a/app/styles/account_details.scss
+++ b/app/styles/account_details.scss
@@ -263,9 +263,12 @@
 }
 
 .verified_icon{
-  float: left !important;
-  .verified_text {
-    margin: 5%;
-    font-size: 0.8em;
+  display: inline-block;
+  font-size: 0.8rem;
+  font-style: italic;
+  margin-left: 0.5rem;
+
+  span {
+    margin-left: 0.2rem;
   }
 }
