--- a/app/styles/components/_change_phone_number_overlay.scss
+++ b/app/styles/components/_change_phone_number_overlay.scss
@@ -1,34 +1,33 @@
 .phone-form {
-  height: 100%;
+  height: 90%;
 }
-.change-phonenumber-container {
-  height: 70%;
-  display: grid;
-  grid-template-columns: auto 1fr auto;
-  grid-gap: 10px;
-  padding: 10px;
-  justify-items: center;
-  align-content: center;
-  padding-right: 20px;
 
-  .item-description {
-    grid-column: auto / span 3;
-    margin: 5px auto;
+.mobile-update-popup {
+  height: 100vh;
+  padding: 0.5rem;
+
+  .row .row {
     width: 100%;
   }
 
-  .item {
-    margin: auto;
+  .prefix {
+    display: inline-block;
+    width: 5rem;
   }
 
-  .item-wide {
-    margin: auto;
+  .mobile input {
+    display: inline-block;
+    width: 65%;
+    color: black;
+  }
+
+  button {
     width: 100%;
+    float: left;
   }
 }
 
 .pin-input-container {
-  height: 70%;
   display: grid;
   grid-template-columns: auto auto auto;
   padding: 10px;
